# pynas

./: .gitignore  MANIFEST.in  NB-1.1-Model_Training.ipynb  NB-1.5-Model_Training.ipynb  README.md  api.py  config.ini  crossover.py  example.ipynb  launch.sh  main.ipynb  main.py  mutation.py  nas_seg_burned.py  pyproject.toml  segmentify.py  setup.py  unet.ipynb  vocabulary.py
.ipynb_checkpoints/: NB-1.1-Model_Training-checkpoint.ipynb  NB-1.2-Model_Training-checkpoint.ipynb  NB-2.0-Model_Testing-checkpoint.ipynb
data/: placeholder.txt
datasets/FireTas/: dataset.py
datasets/Phisat2SimulatedData/: segmentation_dataset.py
datasets/RawClassifier/: loader.py
handler/: __init__.py  architecture_builder.py  classification.py  classify.py  generic_lightning_module.py  generic_network.py  generic_unet.py  individual.py
handler/blocks/: __init__.py  convolutions.py  heads.py
handler/opt/: evo.py
lightning_logs/version_0/: events.out.tfevents.1741475146.eohpc-phigpu13.349254.0  events.out.tfevents.1741475467.eohpc-phigpu13.349254.1  events.out.tfevents.1742918296.eohpc-phigpu13.1176048.0
lightning_logs/version_1/: events.out.tfevents.1741475468.eohpc-phigpu13.349254.2  events.out.tfevents.1741475975.eohpc-phigpu13.349254.3  events.out.tfevents.1742919013.eohpc-phigpu13.1176688.0
logs/GA_logs/: nas_results.txt  (+11 more)
notebooks/: example.ipynb  reader_results.ipynb
pynas/: __init__.py
pynattas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scritps/: build.sh  install.sh  launch.sh  schedule.sh
tests/: playground.ipynb  test_crossover_mutation.py
(+217 files in other folders)
