[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynas"
version = "0.1.0"
description = "Pynattas, a powerful open-source Python package that provides a comprehensive set of tools for Neural Architecture Search"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8,<4"
license = {text = "GPL-3.0-only"}
authors = [
  {name = "Roberto Del Prete"},
  {name = "Andrea Mazzeo"},
  {name = "Parampuneet Thind"},
]
maintainers = [{name = "Roberto Del Prete", email = "robertodelprete88@gmail.com"}]
dependencies = [
  "numpy",
  "opencv-python",
  "pandas",
  "tqdm",
  "matplotlib",
  "seaborn",
  "rasterio",
  "tifffile"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.8",
  "Environment :: GPU :: NVIDIA CUDA :: 11.0"
]

[project.urls]
Homepage = "https://github.com/sirbastiano/PyNA-tta-S"
Source = "https://github.com/sirbastiano/pynas"

[tool.setuptools.packages.find]
include = ["pynas*"]